[package]
name = "rusty-rays"
version = "0.1.0"
edition = "2021"
default-run = "rusty-rays"

[[bin]]
name = "rusty-rays"
path = "src/bin/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
clap = { version = "4", features = ["derive"]}
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }